--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f3f3f3;
+      background-color: #1d0404;
       padding: 50px;
     }
     .form-container {
-      background: white;
+      background: rgb(200, 238, 14);
       padding: 30px;
       border-radius: 10px;
-      max-width: 400px;
+      max-width: 4000px;
       margin: auto;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      background:image("")
     }
     input, textarea, button {
       width: 100%;
@@ -35,17 +36,21 @@
 </head>
 <body>
   <div class="form-container">
-    <h2>Ask Your Question</h2>
+    <h1>Yash More</h1>
+    <h4>Please use the form below to share any inquiries or questions.</h4>
     <form action="https://formsubmit.co/ymore5158@gmail.com" method="POST">
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_template" value="table">
       <label for="name">Your Name:</label>
       <input type="text" name="name" required>
-      
-      <label for="question">Your Question:</label>
+      <div>
+      <iable for="Email">Your Email:</iable>
+      <input type="text" Email="Email" required>
+      </div>
+      <label for="question">Your message:</label>
       <textarea name="question" rows="5" required></textarea>
 
-      <button type="submit">Send</button>
+      <button type="submit">Submit</button>
     </form>
   </div>
 </body>
